# open-team-ai

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  mise.toml
.claude/skills/: README.md
.github/release-notes/: v0.1.0.md
.github/workflows/: release.yml
crates/openteam/: Cargo.toml
crates/openteam-core/: Cargo.toml
crates/openteam-core/src/: artifacts.rs  board.rs  clock.rs  context.rs  directive.rs  event.rs  ids.rs  knowledge.rs  lib.rs  llm.rs  message.rs  metrics.rs  runtime.rs  tools.rs
crates/openteam-mock/: Cargo.toml
crates/openteam-mock/src/: arc.rs  behavior.rs  clock.rs  embeddings.rs  fixtures.rs  lib.rs  parse.rs  scenario.rs  seed.rs  server.rs
crates/openteam-mock/src/testdata/: registries.json
crates/openteam-mock/tests/: contract.rs
crates/openteam-serve/: Cargo.toml
crates/openteam-serve/src/: config.rs  debug.html  debug.rs  discovery.rs  fold.rs  lib.rs  routes.rs  schema.rs  server.rs  stream.rs  tail.rs
crates/openteam-serve/tests/: endpoints.rs  fixture.rs  stream.rs
crates/openteam-serve/tests/fixtures/019f77e7-61ac-7252-8e66-1b06148cf5c5/: board.json  events.jsonl
crates/openteam-wire/: Cargo.toml
crates/openteam-wire/src/: chat.rs  embeddings.rs  error.rs  identity.rs  lib.rs  tokens.rs
crates/openteam/src/: cli.rs  main.rs  tui.rs
crates/openteam/tests/: e2e_fixtures.rs  e2e_happy.rs  e2e_serve.rs  pairing.rs
crates/openteam/tests/common/: mod.rs
crates/openteam/tests/fixtures/: cap-hit.json  context-collapse.json  deadlock.json  declined-directive.json  livelock.json  malformed-k3.json  message-flood.json  meta-directive.json  stall.json
docs/: IMPLEMENTATION-PLAN-STREAM-SERVER.md  IMPLEMENTATION-PLAN.md  implementation-pins.md
docs/adr/: 0001-offline-mock-first-harness.md  0002-unified-agent-runtime.md  0003-fixed-pool-respecialization.md  0004-rebuilt-orchestrator-context.md  0005-two-tier-directive-authority.md  0006-verb-gated-termination.md  0007-event-driven-ticks-liveness-nudge.md  0008-schema-pure-identity-channels.md  0009-team-as-runtime-entity.md  0010-flat-orchestrator-authored-board.md  0011-store-first-channel-free-messaging.md  0012-positional-agent-handles.md  0013-wire-contract-crate-mock-isolation.md  0014-knowledge-store-shared-semantic-memory.md  0015-agent-runtime-turn-loop-scheduler.md  0016-data-driven-context-policies-universal-rebuild.md  0017-coordination-verb-registry-tool-outcome-envelope.md  0018-wire-types-stateless-transport-agent-channels.md  0019-mock-server-loopback-stateless-chatdecision-seam.md  0020-meta-agent-layer-metrics-directives-cadence.md  0021-built-in-behavior-arc-prompt-legibility-contract.md  0022-event-schema-run-artifacts.md  0023-scenario-player-call-seq-indexed-fixtures.md  0024-cli-surface-commands-flags-exit-codes.md  0025-test-plan-tiers-seed-derivation-contract-oracle.md  0026-real-openai-default-mock-for-tests.md  0027-stream-server-sidecar-flock-liveness-poll-tailing.md  0028-streamed-wire-contract-sse-snapshot-run-list.md  0029-v1-prefix-additive-compat-debug-page.md  0030-openteam-serve-crate-pure-reader-test-posture.md
docs/agents/: domain.md  issue-tracker.md
docs/prototypes/: dry-run-transcript.md
docs/research/: multi-agent-prior-art.md  openai-wire-subset.md  rust-crate-inventory.md  stream-transport.md
