[package]
name = "openteam-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
openteam-wire = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
jiff = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
rustix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
