[package]
name = "openteam"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "An LLM harness for parallelized agentic team working."

[dependencies]
openteam-core = { workspace = true }
openteam-mock = { workspace = true }
openteam-serve = { workspace = true }

clap = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
ratatui = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
openteam-wire = { workspace = true }
openteam-serve = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
jiff = { workspace = true }
# A blocking HTTP client for the stream-server e2e (spawn `openteam serve`,
# hit its endpoints); the async paths are covered in the serve crate's tests.
reqwest = { workspace = true, features = ["blocking"] }
serde_json = { workspace = true }

[lints]
workspace = true
